--- a/Python_Web_Server_Spring_2024-main/App.html
+++ b/Python_Web_Server_Spring_2024-main/App.html
@@ -68,7 +68,7 @@
                     })
                 });
         
-            /*$("#buton-signup").click(function () {
+            $("#buton-signup").click(function () {
                 $.ajax({
                     method: "GET",
                     url: "/api/register"
